--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <div id="tempo-juntos" class="tempo"></div>
         <p class="descricao">Heloisa</p>
         <h2>
-        <P>
-            Para você lembrar de quantos dias se passaram da minha melhor decisão... E que a gente possa voltar aqui e ver que os dias só aumentaram. Eu te amo, minha oreinha.
-        </P>    
+            Para você lembrar de quantos dias se passaram da minha melhor decisão... E que a gente possa voltar aqui e ver que os dias só aumentaram. <br> Eu te amo, minha oreinha. </br>
+            <img src="coração.png" alt="Foto Coração" class="coração">
         </h2>
     </div>
     <script src="script.js"></script>
